--- a/examenparcial/appsettings.json
+++ b/examenparcial/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "PostgreSQLConnection":"Host=dpg-cojv9qmd3nmc73c4c380-a.oregon-postgres.render.com;Database=bdmovies_db_gs7f;Username=bdmovies_db_gs7f_user;Password=waLtVPzsz5rKngoNOEG3IM5jdohpTxNE;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
